--- a/services.html
+++ b/services.html
@@ -36,6 +36,14 @@
     .services { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; }
     .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); }
 
+    .card small {
+      display: block;
+      margin-top: 0.25rem;
+      color: #555;
+      font-size: 0.85rem;
+      line-height: 1.3;
+    }
+
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
     .contact-link { color: black; text-decoration: none; font-weight: bold; }
     .contact-link:hover { text-decoration: underline; }
@@ -60,15 +68,26 @@
 <section>
   <h2>What We Offer</h2>
   <div class="services">
-    <div class="card">Outlet & Switch Replacement</div>
-    <div class="card">Lighting & Ceiling Fans</div>
-    <div class="card">Electrical Troubleshooting</div>
-    <div class="card">Panel & Safety Inspections</div>
+    <div class="card">Circuit Breaker Installation<small>Installing new breakers for safe and reliable electrical service in your home.</small></div>
+    <div class="card">Electric Inspection<small>Detailed system safety checks to identify hazards and ensure code compliance.</small></div>
+    <div class="card">Electric Panel Installation<small>New service panel installation for increased capacity and safety.</small></div>
+    <div class="card">Electric Repair<small>Repairing faulty connections, circuits, and system components to restore function.</small></div>
+    <div class="card">Wire Repair<small>Fixing damaged, frayed, or outdated wiring for improved safety and reliability.</small></div>
+    <div class="card">Generator Installation<small>Backup power setup to keep essential systems running during outages.</small></div>
+    <div class="card">Light Fixture Repair<small>Restoring lighting fixtures and diagnosing wiring problems.</small></div>
+    <div class="card">Outlet Repair<small>Fixing dead, damaged, or unsafe outlets and switches.</small></div>
+    <div class="card">Circuit Breaker Repair<small>Diagnosing breaker failures and restoring proper electrical protection.</small></div>
+    <div class="card">Electric Installation or Replacement<small>Installing or upgrading electrical components and equipment.</small></div>
+    <div class="card">Electric Panel Repair<small>Correcting panel issues to ensure safe and consistent power distribution.</small></div>
+    <div class="card">Wire Installation<small>Running new wiring for remodels, additions, or upgraded systems.</small></div>
+    <div class="card">Electric Vehicle Charging Station Installation<small>Home charging solutions for electric vehicles.</small></div>
+    <div class="card">Light Fixture Installation<small>Installing indoor and outdoor lighting fixtures for improved comfort and style.</small></div>
+    <div class="card">Outlet Installation<small>Adding new outlets and switches to improve convenience and accessibility.</small></div>
   </div>
 </section>
 
 <footer>
-  <p>📞 <a href="tel:3303459389" class="contact-link">(330) 234-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
+  <p><a href="tel:3303459389" class="contact-link">(330) 234-9389</a> | <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
   <p>&copy; 2025 Fast Current Electric LLC</p>
 </footer>
 
