--- a/services.html
+++ b/services.html
@@ -17,11 +17,7 @@
         font-weight: 900;
         font-family: 'Arial Black', Arial, sans-serif;
         font-size: 2.8rem;
-        text-shadow:
-            -2px -2px 0 black,
-            2px -2px 0 black,
-            -2px 2px 0 black,
-            2px 2px 0 black;
+        text-shadow:-2px -2px 0 black,2px -2px 0 black,-2px 2px 0 black,2px 2px 0 black;
         margin: 0;
     }
 
@@ -76,7 +72,7 @@
     </div>
 
     <div class="card">
-      <img src="images/wire in outlet.jpg" alt="Electric Panel Upgrades">
+      <img src="images/placeholder.jpg" alt="Electric Panel Upgrades">
       <strong>Electric Panel Upgrades</strong>
       <small>Upgrading your electrical panel to handle increased capacity and safety needs.</small>
     </div>
@@ -88,7 +84,7 @@
     </div>
 
     <div class="card">
-      <img src="images/car charging.jpg" alt="Electric Vehicle Charging Station Installation">
+      <img src="images/car charging.jpg" alt="EV Charging Station">
       <strong>Electric Vehicle Charging Station Installation</strong>
       <small>Providing home charging solutions for electric vehicles.</small>
     </div>
@@ -142,7 +138,7 @@
     </div>
 
     <div class="card">
-      <img src="images/placeholder.jpg" alt="Outlet Repair">
+      <img src="images/wire in outlet.jpg" alt="Outlet Repair">
       <strong>Outlet Repair</strong>
       <small>Fixing dead, damaged, or unsafe outlets and switches.</small>
     </div>
